--- a/Lab3/styles/main.css
+++ b/Lab3/styles/main.css
@@ -1,10 +1,6 @@
 @import "../../styles/variables.css";
 
 body {
-  background-color: var(--darkGray);
-  color: var(--lightGreen);
-}
-
-a {
-  color: var(--lightGreen);
+  margin: 0;
+  background-color: var(--white);
 }
