Added main template for all pages

--- a/Lab3/components/footer/footer.html
+++ b/Lab3/components/footer/footer.html
@@ -3,16 +3,17 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="main.css" />
+    <link
+      rel="stylesheet"
+      href="/components/footer/footer.css"
+      type="text/css"
+    />
     <title>Lab 3</title>
   </head>
-  <body>
-    <div id="header-container"></div>
-    <div>
-      <h1>Hello</h1>
-    </div>
-    <div id="footer-container"></div>
 
-    <script src="../../utils/loadHeaderAndFooter.js"></script>
+  <body>
+    <div class="mainFooter">
+      <div class="iconsBox"></div>
+    </div>
   </body>
 </html>
