Add smart logic

--- a/Lab3/components/footer/footer.html
+++ b/Lab3/components/footer/footer.html
@@ -13,7 +13,15 @@
 
   <body>
     <div class="mainFooter">
-      <div class="iconsBox"></div>
+      <div class="iconsBox">
+        <img src="../../assets/images/icon-facebook-white.svg">
+        <img src="../../assets/images/icon-instagram-white.svg">
+        <img src="../../assets/images/icon-linkedin-white.svg">
+        <img src="../../assets/images/icon-youtube-white.svg">
+      </div>
+      <div>
+        <p class="mainText">© Copyright Materialise 2023</p>
+      </div>
     </div>
   </body>
 </html>
