--- a/Lab3/components/footer/footer.css
+++ b/Lab3/components/footer/footer.css
@@ -4,10 +4,21 @@
   background-color: var(--darkBlue);
   height: 100px;
   display: flex;
+  align-items: center;
 }
 
 .iconsBox {
+    padding-left: 3%;
 }
 
 .icon {
+}
+
+.mainText {
+  color: var(--white);
+  font-family: Inter;
+  font-size: 36px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: normal;
 }
