--- a/Lab3/pages/main/main.css
+++ b/Lab3/pages/main/main.css
@@ -1,1 +1,25 @@
 @import "../../styles/main.css";
+@import "../../styles/header.css";
+@import "../../styles/footer.css";
+@import "../../styles/dopSection.css";
+
+a {
+  text-decoration: none;
+  cursor: pointer;
+  color: var(--black);
+}
+
+.mainContainer{
+  background-color: red;
+  margin-top: 200px;
+  margin-right: 450px;
+  margin-left: 28px;
+}
+
+.mainText {
+  color: var(--white);
+  font-size: 36px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: normal;
+}
