--- a/Lab3/styles/header.css
+++ b/Lab3/styles/header.css
@@ -1,7 +1,9 @@
-@import "../../styles/main.css";
+@import "../styles/header.css";
 
 .mainHeader {
-  background-color: red;
+  position: fixed;
+  top: 0;
+  padding-bottom: 10px;
   width: 100%;
   height: 100px;
   display: flex;
@@ -9,25 +11,18 @@
 }
 
 span {
-  font-family: Inter;
   font-size: 36px;
   font-style: normal;
   font-weight: 600;
 }
 
-a {
-  text-decoration: none;
-  cursor: pointer;
-  color: var(--black);
-}
-
 .labelBlock {
   padding-left: 85px;
-}
 
-.label {
-  width: 236px;
-  height: 85px;
+  .label {
+    width: 236px;
+    height: 85px;
+  }
 }
 
 .menu {
@@ -36,6 +31,13 @@ a {
 }
 
 .menuElement {
+  font-size: 36px;
+  font-style: normal;
+  font-weight: 600;
   padding-top: 36px;
   padding-right: 59px;
+}
+
+.menuElement :hover {
+  color: blue;
 }
