--- a/Lab3/pages/main/main.css
+++ b/Lab3/pages/main/main.css
@@ -9,9 +9,9 @@ a {
   color: var(--black);
 }
 
-.mainContainer{
-  background-color: red;
-  margin-top: 200px;
+.mainContainer {
+  background-color: var(--white);
+  margin-top: 120px;
   margin-right: 450px;
   margin-left: 28px;
 }
@@ -22,4 +22,163 @@ a {
   font-style: normal;
   font-weight: 600;
   line-height: normal;
+}
+
+.news {
+  .newsTtile {
+    font-size: 36px;
+    font-weight: bold;
+    margin: 0;
+  }
+
+  .newsTitleInfo {
+    font-size: 20px;
+    margin: 0;
+  }
+
+  .mainNewxText {
+    font-size: 28px;
+    font-style: italic;
+  }
+
+  .newsBlock {
+    .newsTitle {
+      font-size: 36px;
+      margin-bottom: 0;
+    }
+
+    .newsTitleInfo {
+      font-size: 20px;
+      margin: 0;
+      margin-bottom: 17px;
+    }
+
+    .newsElement {
+      width: 930px;
+      height: 152px;
+      margin-bottom: 17px;
+      background-color: #d9d9d9;
+    }
+  }
+}
+
+.aboutCompany {
+  .aboutTitle {
+    font-size: 36px;
+    font-weight: bold;
+    margin: 0;
+  }
+  .aboutCompanyTitleInfo {
+    font-size: 20px;
+    margin: 0;
+  }
+
+  .aboutCompanyText {
+    font-size: 28px;
+    font-style: italic;
+  }
+
+  .iconsContainer {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    text-align: center;
+
+    .iconElementLeft {
+      margin-left: 152px;
+    }
+    .iconElementRight {
+      margin-right: 210px;
+    }
+  }
+}
+
+.products {
+  .productTitle {
+    font-size: 36px;
+    font-weight: bold;
+    margin: 0;
+  }
+
+  .productTitleInfo {
+    font-size: 20px;
+    margin: 0;
+  }
+
+  .productText {
+    font-size: 28px;
+    font-style: italic;
+  }
+
+  .productInfo {
+    display: flex;
+  }
+
+  .productElements {
+    overflow: hidden;
+    font-size: 26px;
+  }
+}
+
+.contacts {
+  margin-top: 20px;
+  .contactTitle {
+    font-size: 36px;
+    font-weight: bold;
+    margin: 0;
+  }
+
+  .contactText {
+    font-size: 28px;
+    font-style: italic;
+  }
+
+  .supportBlocks {
+    display: flex;
+    align-items: center;
+
+    .block {
+      width: 434px;
+      height: 222px;
+      border-radius: 30px;
+      background-color: #d9d9d9;
+    }
+  }
+
+  .suportSecondtext {
+    font-size: 24px;
+    font-weight: bold;
+  }
+}
+
+.history{
+  margin-top: 20px;
+  .hsitoryTitle {
+    font-size: 36px;
+    font-weight: bold;
+    margin: 0;
+  }
+
+  .hsitoryTitleInfo {
+    font-size: 20px;
+    margin: 0;
+  }
+
+  .historyText {
+    font-size: 28px;
+    font-style: italic;
+  }
+}
+
+.menuElement {
+  font-size: 36px;
+  font-style: normal;
+  font-weight: 600;
+  padding-top: 36px;
+  padding-right: 59px;
+}
+
+.menuElement.active {
+  color: blue;
+  text-decoration: underline;
 }
