--- a/Lab4-5/src/styles/variables.css
+++ b/Lab4-5/src/styles/variables.css
@@ -2,6 +2,8 @@
     --white: #ffffff;
     --light-blue: #D8E3FE;
     --light-blue2: #D2E1FF;
+    --light-blue3: #F5F8FF;
     --soft-blue: #5E81FE;
     --blue: #3A79FF;
+    --blue-Text: #3D4F9F;
   }
