--- a/Lab4-5/src/styles/elements/customers.css
+++ b/Lab4-5/src/styles/elements/customers.css
@@ -9,6 +9,7 @@
     background-color: var(--white);
     display: flex;
     justify-content: space-between;
+    align-items: center;
 
     .customerElement{
         margin-right: 76.5px;
