--- a/Lab4-5/src/styles/media.css
+++ b/Lab4-5/src/styles/media.css
@@ -13,6 +13,33 @@
       }
     }
   }
+
+  .customers {
+    margin-left: 15px;
+    margin-right: 15px;
+
+    .customerElement {
+      margin-right: 40px;
+    }
+  }
+
+  .planAndManage {
+    flex-direction: column;
+    height: auto;
+    align-items: center;
+
+    .textCta {
+      margin-top: 50px;
+      margin-left: 0;
+      margin-right: 0px;
+      height: auto;
+    }
+
+    .illustrations {
+      margin-top: 10px;
+      margin-left: 200px;
+    }
+  }
 }
 
 @media (max-width: 903px) {
@@ -34,6 +61,24 @@
     .socialMediaIcons {
       margin-left: 180px;
       margin-right: 10px;
+    }
+  }
+}
+
+@media (max-width: 765px) {
+  .customers {
+    width: 100%;
+    margin-top: 28px;
+    margin-bottom: 58px;
+    flex-direction: column;
+
+    .customerElement {
+      margin: 0;
+      margin-top: 25px;
+    }
+
+    .audiElement {
+      margin-top: 25px;
     }
   }
 }
