--- a/Lab4-5/src/styles/elements/heroImage.css
+++ b/Lab4-5/src/styles/elements/heroImage.css
@@ -1,26 +1,18 @@
 @import "../settings.css";
 
 .heroImageBlock {
-  height: 570px;
   background: linear-gradient(180deg, #f4f7ff 0%, #f1f5ff 100%);
+  display: flex;
+  justify-content: center;
+  height: 100%;
+  width: 100%;
 
-  .blueLine {
-    height: 1px;
-    background-color: var(--light-blue);
-  }
-
-  .vector1 {
-    height: 305px;
-    width: 100%;
-    fill: none;
-  }
-
-  .cloud1 {
-    width: 31px;
-    height: 16px;
-    fill: #fff;
-    filter: drop-shadow(0px 5px 45px rgba(151, 175, 227, 0.1));
-    margin-top: 37px;
-    margin-left: 1208px;
+  .mainText {
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    position: relative;
+    top: 50px;
+    right: 700px;
   }
 }
