better idea. Added new background size

--- a/Lab4-5/src/styles/elements/heroImage.css
+++ b/Lab4-5/src/styles/elements/heroImage.css
@@ -1,18 +1,19 @@
 @import "../settings.css";
 
 .heroImageBlock {
-  background: linear-gradient(180deg, #f4f7ff 0%, #f1f5ff 100%);
+  background-image: url("../../img/heroImage.jpg");
+  background-repeat: no-repeat;
+  background-size: 100% 100%;
   display: flex;
   justify-content: center;
-  height: 100%;
+  height: 580px;
   width: 100%;
+  max-width: 100%;
 
   .mainText {
     text-align: center;
     display: flex;
     flex-direction: column;
-    position: relative;
-    top: 50px;
-    right: 700px;
+    margin-top: 100px;
   }
 }
