--- a/Lab4-5/src/styles/elements/quotes.css
+++ b/Lab4-5/src/styles/elements/quotes.css
@@ -8,6 +8,9 @@
 
   .quotes_block {
     display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
     margin-top: 110px;
     margin-left: 276px;
     margin-right: 276px;
@@ -30,6 +33,10 @@
           margin-top: 41px;
           margin-right: 71px;
           margin-bottom: 53px;
+
+          .mainPhoto{
+            margin-left: 100px
+          }
         }
       }
     }
